<resources>
    <string name="app_name" translatable="false">Teapod</string>
    <string name="title_home">Home</string>
    <string name="title_library">Library</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>

    <!-- home fragment -->
    <string name="highlight_media">Highlight</string>
    <string name="up_next">Up next</string>
    <string name="my_list">My list</string>
    <string name="new_episodes">New episodes</string>
    <string name="new_simulcasts">New simulcasts</string>
    <string name="new_titles">New titles</string>
    <string name="top_ten">Top 10</string>

    <!-- search fragment -->
    <string name="search_hint">Search for movies and series</string>
    <string name="media_poster_desc" translatable="false">poster</string>
    <string name="media_poster_backdrop_desc" translatable="false">poster backdrop</string>

    <!-- media fragment -->
    <string name="button_play">Play</string>
    <string name="text_title_ex" translatable="false">A Silent Voice</string>
    <string name="text_overview_ex" translatable="false">Shouya Ishida starts bullying the new girl in class …</string>
    <string name="text_year_ex" translatable="false">2016</string>
    <string name="text_age_ex" translatable="false">6</string>
    <string name="text_episodes_count" translatable="false">1$d episodes</string>
    <plurals name="text_episodes_count">
        <item quantity="one">%d episode</item>
        <item quantity="other">%d episodes</item>
    </plurals>
    <plurals name="text_runtime">
        <item quantity="one">%d Minute</item>
        <item quantity="other">%d Minutes</item>
    </plurals>
    <string name="season_number_title" translatable="false">S%1$d - %2$s</string>
    <string name="similar_titles">Similar titles</string>
    <string name="component_episode_title">Ep. %1$s %2$s</string>
    <string name="component_episode_title_sub">Ep. %1$s %2$s (Sub)</string>
    <string name="component_poster_desc" translatable="false">episode poster</string>
    <string name="component_watched_desc" translatable="false">already watched</string>

    <!-- account fragment -->
    <string name="account">Account</string>
    <string name="account_login_ex" translatable="false">user@example.com</string>
    <string name="account_login_desc">Tap to edit</string>
    <string name="account_subscription">Subscription %1$s</string>
    <string name="account_subscription_desc">Tap to extend</string>
    <string name="settings">Settings</string>
    <string name="settings_content_language">Preferred content language</string>
    <string name="settings_content_language_desc">English</string>
    <string name="settings_content_language_none">None</string>
    <string name="settings_prefer_subbed">Prefer subbed</string>
    <string name="settings_prefer_subbed_desc">Use original language, if present</string>
    <string name="settings_autoplay">Autoplay</string>
    <string name="settings_autoplay_desc">Play next episode automatically</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="dev_settings">Developer Settings</string>
    <string name="update_playhead">Playhead updates</string>
    <string name="update_playhead_desc">Update episode playhead on cr</string>
    <string name="export_data">export data</string>
    <string name="export_data_desc">export "My list" to a file</string>
    <string name="import_data">import data</string>
    <string name="import_data_desc">import "My list" from a file</string>
    <string name="import_data_success">imported "My list" successfully</string>
    <string name="info">Info</string>
    <string name="info_about" translatable="false">Teapod by @Seil0</string>
    <string name="info_about_desc">Version %1$s (%2$s)</string>
    <string name="edit_login_credentials">Edit credentials</string>
    <string name="edit_login_credentials_desc">Edit your crunchyroll login credentials. The credentials will be stored encrypted on your device.</string>
    <string name="edit_login_credentials_fail">Invalid login or password. Please try again.</string>

    <!-- about fragment -->
    <string name="version">Version</string>
    <string name="version_desc" translatable="false">%1$s (%2$s)</string>
    <string name="authors">Author</string>
    <string name="author_desc" translatable="false">seil0@mosad.xyz</string>
    <string name="source">Source code</string>
    <string name="teapod_repo" translatable="false">git.mosad.xyz/Seil0/teapod</string>
    <string name="license">License</string>
    <string name="license_desc" translatable="false">GNU General Public License 3</string>
    <string name="about_info">An unofficial app for Crunchyroll.</string>
    <string name="tmdb_notice" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb.</string>
    <string name="third_party_heading">Third Party Licenses</string>
    <string name="third_party_component_desc">© %1$s %2$s under %3$s</string>
    <string name="dev_settings_enabled">You are now a developer</string>
    <string name="dev_settings_already">You are already a developer</string>

    <!-- player -->
    <string name="close_player">close player</string>
    <string name="rewind_10">rewind 10 seconds</string>
    <string name="play_pause">play/pause</string>
    <string name="forward_10">forward 10 seconds</string>
    <string name="rwd_10_s" translatable="false">- 10 s</string>
    <string name="fwd_10_s" translatable="false">+ 10 s</string>
    <string name="next_episode">Next Episode</string>
    <string name="skip_opening">Skip Opening</string>
    <string name="time_min_sec" translatable="false">%1$02d:%2$02d</string>
    <string name="time_hour_min_sec" translatable="false">%1$d:%2$02d:%3$02d</string>
    <string name="language">Language</string>
    <string name="subtitles">Subtitles</string>
    <string name="episodes">Episodes</string>
    <string name="episode">Episode</string>
    <string name="no_subtitles">None</string>

    <!-- Onboarding -->
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="on_welcome_heading">Welcome</string>
    <string name="on_welcome">Teapod is an unofficial app for Crunchyroll, licensed under the terms and conditions of GPL 3.\n\nPlease note: Using Teapod may violate the ToS of Crunchyroll.</string>
    <string name="on_get_started">Get started</string>
    <string name="on_login_heading">Login</string>
    <string name="on_login_desc">To use Teapod you have to log in with your Crunchyroll account. Your login data will be stored encrypted on your device.</string>
    <string name="on_login_failed">Could not login! Make sure Username and Password are correct and try again.</string>

    <!-- dialogs -->
    <string name="save">Save</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="apply">Apply</string>
    <string name="loading">Loading…</string>
    <string name="dialog_timeout_head">Login failed</string>
    <string name="dialog_timeout_desc">Looks like the server is taking to long to respond. Please try again later.</string>

    <!-- etc -->
    <string name="login">Login</string>
    <string name="login_desc">You need to login before you can use Teapod. The Login-Data will be stored encrypted on your device.</string>
    <string name="login_failed_desc"> Please try again.</string>
    <string name="password">Password</string>

    <!-- save keys -->
    <string name="encrypted_preference_file_key" translatable="false">org.mosad.teapod.encrypted_preferences</string>
    <string name="preference_file_key" translatable="false">org.mosad.teapod.preferences</string>
    <string name="save_key_user_login" translatable="false">org.mosad.teapod.user_login</string>
    <string name="save_key_user_password" translatable="false">org.mosad.teapod.user_password</string>
    <!-- for legacy reasons the prefer subbed key is called prefer_secondary-->
    <string name="save_key_prefer_secondary" translatable="false">org.mosad.teapod.prefer_secondary</string>
    <string name="save_key_preferred_local" translatable="false">org.mosad.teapod.preferred_local</string>
    <string name="save_key_autoplay" translatable="false">org.mosad.teapod.autoplay</string>
    <string name="save_key_dev_settings" translatable="false">org.mosad.teapod.dev.settings</string>
    <string name="save_key_theme" translatable="false">org.mosad.teapod.theme</string>
    <!-- dev settings -->
    <string name="save_key_update_playhead" translatable="false">org.mosad.teapod.update_playhead</string>

    <!-- intents & states -->
    <string name="intent_media_id" translatable="false">intent_media_id</string>
    <string name="intent_season_id" translatable="false">intent_season_id</string>
    <string name="intent_episode_id" translatable="false">intent_episode_id</string>

</resources>