<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="5dp"
    android:paddingTop="7dp"
    android:paddingEnd="5dp"
    android:paddingBottom="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_episode"
                android:layout_width="128dp"
                android:layout_height="72dp"
                android:contentDescription="@string/component_poster_desc"
                app:shapeAppearance="@style/ShapeAppearance.Teapod.RoundedPoster"
                app:srcCompat="@color/md_disabled_text_dark_theme" />

            <ImageView
                android:id="@+id/image_episode_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_circle__black_transparent_24dp"
                android:contentDescription="@string/button_play"
                app:srcCompat="@drawable/ic_baseline_play_arrow_24"
                app:tint="#FFFFFF" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_episode_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_weight="1"
            android:text="@string/component_episode_title"
            android:textColor="?textPrimary"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_watched"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/component_watched_desc"
            app:srcCompat="@drawable/ic_baseline_check_circle_24"
            app:tint="?iconNoAction" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_episode_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="?textSecondary" />
</LinearLayout>