<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?themePrimary"
    tools:context=".activity.main.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_app_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="5dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_about_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="12dp"
                android:text="@string/about_info" />

            <LinearLayout
                android:id="@+id/linear_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/image_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/version"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="9dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_outline_info_24"
                    app:tint="?iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/version"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_version_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/version_desc"
                        android:textColor="?textSecondary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_authors"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/image_authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/authors"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="9dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_people_24"
                    app:tint="?iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_authors"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/authors"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_authors_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author_desc"
                        android:textColor="?textSecondary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_source"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/image_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/source"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="9dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_code_24"
                    app:tint="?iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_source"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/source"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_source_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/teapod_repo"
                        android:textColor="?textSecondary" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_license"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="?android:selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageView
                    android:id="@+id/image_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/account"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:padding="9dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_description_24"
                    app:tint="?iconColor" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_license"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/license"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/text_license_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/license_desc"
                        android:textColor="?textSecondary" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/text_third_party"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="5dp"
                android:text="@string/third_party_heading"
                android:textSize="17sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_third_party"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:orientation="vertical" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_tmdb_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="7dp"
            android:paddingBottom="5dp"
            android:text="@string/tmdb_notice"
            android:textAlignment="center"
            android:textColor="?textSecondary" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>